# libubx

./: .gitignore  .gitmodules  .travis.yml  README.md  ci-build.sh  travis.sh
.github/workflows/: ci.yaml
c/: CMakeLists.txt
c/include/ubx/: constants.h  decode.h  encode.h  ubx_messages.h
c/src/: CMakeLists.txt  decode.c  decode_helpers.h  encode.c
c/test/: CMakeLists.txt  check_ubx.c
